tests/machine/x/rust/cross_join_triple.error
line 0: compile: exit status 1
error[E0308]: mismatched types
 --> /workspace/mochi/tests/machine/x/rust/cross_join_triple.rs:5:194
  |
5 | ...std::collections::HashMap::new(); m.insert("n", n); m.insert("l", l); m.insert("b", b); m }); } } } tmp1 };
  |                                      -             -     ------      ^ expected integer, found `&str`
  |                                      |             |     |
  |                                      |             |     arguments to this method are incorrect
  |                                      |             this argument has type `{integer}`...
  |                                      ... which causes `m` to have type `HashMap<&str, {integer}>`
  |
help: the return type of this call is `&str` due to the type of the argument passed
 --> /workspace/mochi/tests/machine/x/rust/cross_join_triple.rs:5:180
  |
5 | ...ashMap::new(); m.insert("n", n); m.insert("l", l); m.insert("b", b); m }); } } } tmp1 };
  |                                     ^^^^^^^^^^^^^^-^
  |                                                   |
  |                                                   this argument influences the return type of `insert`
note: method defined here
 --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/std/src/collections/hash/map.rs:1201:12

error[E0308]: mismatched types
 --> /workspace/mochi/tests/machine/x/rust/cross_join_triple.rs:5:212
  |
5 | ...ections::HashMap::new(); m.insert("n", n); m.insert("l", l); m.insert("b", b); m }); } } } tmp1 };
  |                             -             -                       ------      ^ expected integer, found `bool`
  |                             |             |                       |
  |                             |             |                       arguments to this method are incorrect
  |                             |             this argument has type `{integer}`...
  |                             ... which causes `m` to have type `HashMap<&str, {integer}>`
  |
help: the return type of this call is `bool` due to the type of the argument passed
 --> /workspace/mochi/tests/machine/x/rust/cross_join_triple.rs:5:198
  |
5 | ...nsert("n", n); m.insert("l", l); m.insert("b", b); m }); } } } tmp1 };
  |                                     ^^^^^^^^^^^^^^-^
  |                                                   |
  |                                                   this argument influences the return type of `insert`
note: method defined here
 --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/std/src/collections/hash/map.rs:1201:12

error[E0609]: no field `n` on type `HashMap<&str, {integer}>`
 --> /workspace/mochi/tests/machine/x/rust/cross_join_triple.rs:8:38
  |
8 |         println!("{:?} {:?} {:?}", c.n, c.l, c.b);
  |                                      ^ unknown field

error[E0609]: no field `l` on type `HashMap<&str, {integer}>`
 --> /workspace/mochi/tests/machine/x/rust/cross_join_triple.rs:8:43
  |
8 |         println!("{:?} {:?} {:?}", c.n, c.l, c.b);
  |                                           ^ unknown field

error[E0609]: no field `b` on type `HashMap<&str, {integer}>`
 --> /workspace/mochi/tests/machine/x/rust/cross_join_triple.rs:8:48
  |
8 |         println!("{:?} {:?} {:?}", c.n, c.l, c.b);
  |                                                ^ unknown field

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0308, E0609.
For more information about an error, try `rustc --explain E0308`.

fn main() {